--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,11 +1,23 @@
 {% extends "base.html" %}
-{% load bootstrap4 %}
+{% load bootstrap4 static %}
 
 {% block title %}Log in{% endblock %}
 
+{% block headextra %}
+    <script src="https://apis.google.com/js/api:client.js"></script>
+
+    <meta name="google-signin-client_id" content="{{ google_oauth_client_id }}">
+
+    {% if google_hosted_domain %}
+        <meta name="google-signin-hosted_domain" content="{{ google_hosted_domain }}">
+    {% endif %}
+
+    <script src="{% static 'accounts/social_login.js' %}"></script
+{% endblock %}
+
 {% block content %}
 
-<h1>Rectory Apps System Login</h1>
+<h1>Rectory Apps Login</h1>
 
 {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
@@ -19,14 +31,16 @@
     {% endif %}
 {% endif %}
 
-<form method="post" class="form">
-  {% csrf_token %}
-  {% bootstrap_form form %}
-  {% buttons %}
-    <button type="submit" class="btn btn-primary">
-      Submit
-    </button>
-  {% endbuttons %}
-</form>
+<div id="signin-section">
+    {% if google_hosted_domain %}
+        <button type="button" class="btn btn-primary google-sign-in hide-during-sign-in">Log in with your {{ google_hosted_domain|capfirst }} Google account</button>
+    {% else %}
+        <button type="button" class="btn btn-primary google-sign-in hide-during-sign-in">Log in with your Google account</button>
+    {% endif %}
+
+    <p class="hide-during-sign-in"><a href="{% url 'accounts:login-native' %}">Administrative Login</a></p>
+</div>
+
+<div class="show-during-sign-in" style="display:none">Hang tight, we are signing you in</div>
 
 {% endblock %}
