--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
 <html lang="en">
 
 <head>
+    <title>{% block title %}{% endblock %}</title>
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,12 +13,12 @@
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="{% static 'js/base.js'%}"></script>
+
     <link rel="stylesheet" href="{% static 'css/base.css'%}">
     
     {% block headextra %}{% endblock %}
-    <title>{% block title %}{% endblock %}</title>
+    
 
 </head>
 
