Support Google login (#1)
* Working Google login

* Bug fixes for login

Check that we can do a Google login before we do one,
and redirect to the native login if not

--- a/accounts/templates/accounts/login_native.html
+++ b/accounts/templates/accounts/login_native.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<h1>Rectory Apps System Login</h1>
+<h1>Rectory Apps Administrative Login</h1>
 
 {% if form.errors %}
     <p>Your username and password didn't match. Please try again.</p>
