--- a/calendar_generator/templates/calendar_generator/calendar_list.html
+++ b/calendar_generator/templates/calendar_generator/calendar_list.html
@@ -27,6 +27,7 @@
                 {% endfor %}    
             </ul>
         </p>
+        <p><a href="{% url 'admin:calendar_generator_calendar_changelist' %}">Administer Calendars</a></p>
     </div>
 </body>
 
