Get some permissions going

--- a/calendar_generator/templates/calendar_generator/calendar_list.html
+++ b/calendar_generator/templates/calendar_generator/calendar_list.html
@@ -1,33 +1,22 @@
+{% extends 'base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block title%}Calendar List{% endblock %}
 
+{% block content %}
+<h1>Calendar List</h1>
+<p>
+    <ul>
+        {% for calendar in calendar_list %}
+            <li><a href="{% url 'calendar_generator:calendar' pk=calendar.pk %}">{{ calendar }}</a></li>
+        {% endfor %}    
+    </ul>
+</p>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% if request.user.is_staff and perms.calendar_generator.can_add_calendar %}
+    <p><a href="{% url 'admin:calendar_generator_calendar_changelist' %}">Administer Calendars</a></p>
+{% endif %}
 
-    <link rel="stylesheet" href="{% static 'calendar_generator/calendar.css' %}">
+</div>
 
-    <title>Calendars</title>
-
-</head>
-
-<body>
-    <div class="container">
-        <h1>Calendar List</h1>
-        <p>
-            <ul>
-                {% for calendar in calendar_list %}
-                    <li><a href="{% url 'calendar_generator:calendar' pk=calendar.pk %}">{{ calendar }}</a></li>
-                {% endfor %}    
-            </ul>
-        </p>
-        <p><a href="{% url 'admin:calendar_generator_calendar_changelist' %}">Administer Calendars</a></p>
-    </div>
-</body>
-
+{% endblock %}
