--- a/templates/home.html
+++ b/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>Rectory Apps</h1>
-    <p>This system is for Rectory School use only.</p>
+    <p>This system is for Rectory School use only. Today will be a good day, and always remember that Adam likes pie.</p>
 {% endblock %}
