Preliminary calendar generator (#3)
* Preliminary calendar generation

* Allow the letters to take up a bit more of the boxes

* More linter more happs

* Links

* Get some permissions going

* Bring in iPython

* What can I say...

Admin site can be accessed with either is_staff or accounts.admin_login permission
Calendar shows appropriate links
Monkey patching makes me sad

--- a/nav/templates/nav/nav.html
+++ b/nav/templates/nav/nav.html
@@ -7,7 +7,8 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            {% nav_item "Admin" "admin:index" %}
+            {% nav_item "Admin" "admin:index" "special:staff" %}
+            {% nav_item "Calendar Generator" "calendar_generator:calendar-list" "calendar_generator.view_calendar" %}
         </ul>
 
         <ul class="navbar-nav mr-right">
