--- a/accounts/templates/accounts/login_social.html
+++ b/accounts/templates/accounts/login_social.html
@@ -6,11 +6,7 @@
 {% block headextra %}
     <script src="https://apis.google.com/js/api:client.js"></script>
 
-    <meta name="google-signin-client_id" content="{{ google_oauth_client_id }}">
-
-    {% if google_hosted_domain %}
-        <meta name="google-signin-hosted_domain" content="{{ google_hosted_domain }}">
-    {% endif %}
+    {{ auth_data|json_script:"auth_data" }}
 
     <script src="{% static 'accounts/social_login.js' %}"></script
 {% endblock %}
