--- a/calendar_generator/templates/calendar_generator/calendar.html
+++ b/calendar_generator/templates/calendar_generator/calendar.html
@@ -30,8 +30,8 @@
         <h2 class="noprint">PDF Links</h2>
         <ul class="noprint">
             <li><a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk preset_slug='black' %}">One-page calendar</a></li>
-            <li>Color one-page calendar</li>
-            <li><a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk %}">Monthly calendar</a></li>
+            <li><a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk preset_slug='color' %}">Color One-page calendar</a></li>
+            <li><a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk preset_slug='color' %}">Monthly calendar</a></li>
             <li><a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk preset_slug='color' %}">Color monthly calendar</a></li>
             <li>All calendar files</li>
         </ul>
