--- a/calendar_generator/templates/calendar_generator/calendar.html
+++ b/calendar_generator/templates/calendar_generator/calendar.html
@@ -19,44 +19,87 @@
 
 <body>
     <div class="container">
-
         <h1>
             Calendar: {{ calendar.title }}
         </h1>
 
+        <p><em>{{ calendar.start_date }} to {{ calendar.end_date }}</em>
+
+        {% if has_admin_access and perms.calendar_generator.add_calendar %}
+            <p class="noprint"><a href="{% url 'admin:calendar_generator_calendar_change' object_id=object.id %}">Edit this calendar</a></p>
+        {% endif %}
+
         <h2 class="noprint">PDF Links</h2>
         <ul class="noprint">
-            <li>One-page calendar</li>
-            <li>Color one-page calendar</li>
-            <li>Monthly calendar</li>
-            <li>Color monthly calendar</li>
-            <li>All calendar files</li>
+            <li>Full year calendar: 
+                {% for i, name in style_presets %}
+                    <a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
+                    {% if not forloop.last %}
+                        &bullet;
+                    {% endif %}
+                {% endfor %}
+            </li>
+
+            <li>Monthly calendars:
+                {% for i, name in style_presets %}
+                    <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
+                    {% if not forloop.last %}
+                        &bullet;
+                    {% endif %}
+                {% endfor %}
+            </li>
+
+            <li>Monthly calendars for embedding:
+                {% for i, name in style_presets %}
+                    <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}?embedded">{{ name }}</a>
+                    {% if not forloop.last %}
+                        &bullet;
+                    {% endif %}
+                {% endfor %}
+            </li>
         </ul>
 
         {% if today_letter %}
-        <h2 class="noprint">Today</h2>
-        <p class="noprint"><strong>{{ today }}: {{ today_letter }}</strong></p>
+            <h2 class="noprint">Today</h2>
+            <p class="noprint"><strong>{{ today }}: {{ today_letter }}</strong></p>
         {% endif %}
 
-        <h2>Day Listing</h2>
-        <ul class="day-list">
-            {% for day, letter in days %}
-            <li>{{day}}: {{letter}}</li>
+        <h2>Day Rotation</h2>
+        <p>
+            {% for letter in day_rotation %}
+                {{ letter }}
+                {% if not forloop.last %} &bullet; {% endif %}
             {% endfor %}
-        </ul>
+        </p>
 
-        <h2>Calendars</h2>
+        <h2>Days Out of Rotation</h2>
+        <p>
+            {% for start, end in skipped_days %}
+                {% if start and end %}
+                    {{ start }} to {{ end }}
+                {% else %}
+                    {{ start }}
+                {% endif %}
+                {% if not forloop.last %} &bullet; {% endif %}
+            {% endfor %}
+        </p>
 
         {% for calendar in calendars %}
         <div class="calendar">
-            <h3>{{ calendar.first_date|date:"F Y" }}</h3>
+            <h2>{{ calendar.first_date|date:"F Y" }}</h2>
             <p class="noprint">
-                <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk year=calendar.year month=calendar.month preset_slug='black' %}">
-                        Black &amp; White PDF
-                </a> &bullet;
-                <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk year=calendar.year month=calendar.month preset_slug='color' %}">
-                    Color PDF
-                </a>
+                {% for i, name in style_presets %}
+                    <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}">{{ name }}</a>
+                    &bullet;
+                {% endfor %}
+
+                {% for i, name in style_presets %}
+                    <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}?embedded">{{ name }} Embedded</a>
+                    
+                    {% if not forloop.last %}
+                        &bullet;
+                    {% endif %}
+                {% endfor %}
             </p>
 
             <table class="table table-bordered">
