--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="apple-touch-icon" sizes="180x180" href={% static 'img/icons/apple-touch-icon.png' %}>
+    <link rel="icon" type="image/png" sizes="32x32" href={% static 'img/icons/favicon-32x32.png' %}>
+    <link rel="icon" type="image/png" sizes="16x16" href={% static 'img/icons/favicon-16x16.png' %}>
+    <link rel="manifest" href={% static 'img/icons/site.webmanifest' %}>
+    <link rel="mask-icon" href={% static 'img/icons/safari-pinned-tab.svg' %} color="#e5782f">
+    <link rel="shortcut icon" href={% static 'img/icons/favicon.ico' %}>
+    <meta name="apple-mobile-web-app-title" content="Rectory Apps">
+    <meta name="application-name" content="Rectory Apps">
+    <meta name="msapplication-TileColor" content="#603cba">
+    <meta name="msapplication-config" content={% static 'img/icons/browserconfig.xml' %}>
+    <meta name="theme-color" content="#ffffff">
+
     {% bootstrap_css %}
     {% bootstrap_javascript jquery='full' %}
 
