Give a default title

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}Rectory Apps{% endblock %}</title>
     
     <!-- Required meta tags -->
     <meta charset="utf-8">
