--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,8 @@
-{% load static bootstrap4 %}
+{% load static bootstrap4 django_bootstrap_breadcrumbs %}
+{% block breadcrumbs %}
+    {% clear_breadcrumbs %}
+    {% breadcrumb "Home" 'home' %}
+{% endblock %}
 
 <!doctype html>
 <html lang="en">
@@ -28,6 +32,7 @@
         
 
         {% bootstrap_messages %}
+        {% render_breadcrumbs "django_bootstrap_breadcrumbs/bootstrap4.html" %}
 
         {% block content %}
         {% endblock %}
