Breadcrumbs in the calendar

--- a/calendar_generator/templates/calendar_generator/calendar_list.html
+++ b/calendar_generator/templates/calendar_generator/calendar_list.html
@@ -1,9 +1,11 @@
-{% extends 'base.html' %}
+{% extends 'calendar_generator/base.html' %}
 {% load static %}
 
 {% block title%}Calendar List{% endblock %}
 
+
 {% block content %}
+
 <h1>Calendar List</h1>
 <p>
     <ul class="list-group">
