--- a/calendar_generator/templates/calendar_generator/calendar.html
+++ b/calendar_generator/templates/calendar_generator/calendar.html
@@ -1,134 +1,128 @@
-{% load static %}
-<!doctype html>
-<html lang="en">
+{% extends 'calendar_generator/base.html' %}
+{% load static django_bootstrap_breadcrumbs %}
 
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% block title %}Calendar: {{ object.title }}{% endblock %}
 
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% block headextra %}
+    {{ block.super }}
 
     <link rel="stylesheet" href="{% static 'calendar_generator/calendar.css' %}">
+{% endblock %}
 
-    <title>Calendar: {{ object.title }}</title>
+{% block breadcrumbs %}
+    {{ block.super }}
 
-</head>
+    {% breadcrumb calendar.title calendar %}    
+{% endblock %}
 
-<body>
-    <div class="container">
-        <h1>
-            Calendar: {{ calendar.title }}
-        </h1>
+{% block content %}
+<h1>
+    Calendar: {{ calendar.title }}
+</h1>
 
-        <p><em>{{ calendar.start_date }} to {{ calendar.end_date }}</em>
+<p><em>{{ calendar.start_date }} to {{ calendar.end_date }}</em>
 
-        {% if has_admin_access and perms.calendar_generator.add_calendar %}
-            <p class="noprint"><a href="{% url 'admin:calendar_generator_calendar_change' object_id=object.id %}">Edit this calendar</a></p>
-        {% endif %}
+{% if has_admin_access and perms.calendar_generator.add_calendar %}
+    <p class="noprint"><a href="{% url 'admin:calendar_generator_calendar_change' object_id=object.id %}">Edit this calendar</a></p>
+{% endif %}
 
-        <h2 class="noprint">PDF Links</h2>
-        <ul class="noprint">
-            <li>Full year calendar: 
-                {% for i, name in style_presets %}
-                    <a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
-                    {% if not forloop.last %}
-                        &bullet;
-                    {% endif %}
-                {% endfor %}
-            </li>
-
-            <li>Monthly calendars:
-                {% for i, name in style_presets %}
-                    <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
-                    {% if not forloop.last %}
-                        &bullet;
-                    {% endif %}
-                {% endfor %}
-            </li>
-
-            <li>Monthly calendars for embedding:
-                {% for i, name in style_presets %}
-                    <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}?embedded">{{ name }}</a>
-                    {% if not forloop.last %}
-                        &bullet;
-                    {% endif %}
-                {% endfor %}
-            </li>
-        </ul>
-
-        {% if today_letter %}
-            <h2 class="noprint">Today</h2>
-            <p class="noprint"><strong>{{ today }}: {{ today_letter }}</strong></p>
-        {% endif %}
-
-        <h2>Day Rotation</h2>
-        <p>
-            {% for letter in day_rotation %}
-                {{ letter }}
-                {% if not forloop.last %} &bullet; {% endif %}
-            {% endfor %}
-        </p>
-
-        <h2>Days Out of Rotation</h2>
-        <p>
-            {% for start, end in skipped_days %}
-                {% if start and end %}
-                    {{ start }} to {{ end }}
-                {% else %}
-                    {{ start }}
-                {% endif %}
-                {% if not forloop.last %} &bullet; {% endif %}
-            {% endfor %}
-        </p>
-
-        {% for calendar in calendars %}
-        <div class="calendar">
-            <h2>{{ calendar.first_date|date:"F Y" }}</h2>
-            <p class="noprint">
-                {% for i, name in style_presets %}
-                    <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}">{{ name }}</a>
-                    &bullet;
-                {% endfor %}
-
-                {% for i, name in style_presets %}
-                    <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}?embedded">{{ name }} Embedded</a>
-                    
-                    {% if not forloop.last %}
-                        &bullet;
-                    {% endif %}
-                {% endfor %}
-            </p>
-
-            <table class="table table-bordered">
-                <thead>
-                    {% for header in calendar.grid.headers %}
-                        <th scope="col">{{ header }}</th>
-                    {% endfor %}
-                </thead>
-                <tbody>
-                    {% for week in calendar.grid.grid %}
-                    <tr>
-                        {% for day in week %}
-                        <td>
-                            {% if day %}
-                                <span class="date">{{ day.date.day }}</span>
-
-                                {% if day.letter %}
-                                    <span class="letter">{{ day.letter }}</span>
-                                {% endif %}
-                            {% endif %}
-                        </td>
-                        {% endfor %}
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
+<h2 class="noprint">PDF Links</h2>
+<ul class="noprint">
+    <li>Full year calendar: 
+        {% for i, name in style_presets %}
+            <a href="{% url 'calendar_generator:one-page-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
+            {% if not forloop.last %}
+                &bullet;
+            {% endif %}
         {% endfor %}
-    </div>
-</body>
+    </li>
 
-</html>
+    <li>Monthly calendars:
+        {% for i, name in style_presets %}
+            <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}">{{ name }}</a>
+            {% if not forloop.last %}
+                &bullet;
+            {% endif %}
+        {% endfor %}
+    </li>
+
+    <li>Monthly calendars for embedding:
+        {% for i, name in style_presets %}
+            <a href="{% url 'calendar_generator:months-pdf' calendar_id=object.pk style_index=i %}?embedded">{{ name }}</a>
+            {% if not forloop.last %}
+                &bullet;
+            {% endif %}
+        {% endfor %}
+    </li>
+</ul>
+
+{% if today_letter %}
+    <h2 class="noprint">Today</h2>
+    <p class="noprint"><strong>{{ today }}: {{ today_letter }}</strong></p>
+{% endif %}
+
+<h2>Day Rotation</h2>
+<p>
+    {% for letter in day_rotation %}
+        {{ letter }}
+        {% if not forloop.last %} &bullet; {% endif %}
+    {% endfor %}
+</p>
+
+<h2>Days Out of Rotation</h2>
+<p>
+    {% for start, end in skipped_days %}
+        {% if start and end %}
+            {{ start }} to {{ end }}
+        {% else %}
+            {{ start }}
+        {% endif %}
+        {% if not forloop.last %} &bullet; {% endif %}
+    {% endfor %}
+</p>
+
+{% for calendar in calendars %}
+<div class="calendar">
+    <h2>{{ calendar.first_date|date:"F Y" }}</h2>
+    <p class="noprint">
+        {% for i, name in style_presets %}
+            <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}">{{ name }}</a>
+            &bullet;
+        {% endfor %}
+
+        {% for i, name in style_presets %}
+            <a href="{% url 'calendar_generator:month-pdf' calendar_id=object.pk style_index=i year=calendar.year month=calendar.month %}?embedded">{{ name }} Embedded</a>
+            
+            {% if not forloop.last %}
+                &bullet;
+            {% endif %}
+        {% endfor %}
+    </p>
+
+    <table class="table table-bordered">
+        <thead>
+            {% for header in calendar.grid.headers %}
+                <th scope="col">{{ header }}</th>
+            {% endfor %}
+        </thead>
+        <tbody>
+            {% for week in calendar.grid.grid %}
+            <tr>
+                {% for day in week %}
+                <td>
+                    {% if day %}
+                        <span class="date">{{ day.date.day }}</span>
+
+                        {% if day.letter %}
+                            <span class="letter">{{ day.letter }}</span>
+                        {% endif %}
+                    {% endif %}
+                </td>
+                {% endfor %}
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
+{% endfor %}
+{% endblock %}
