Add breadcrumbs to the login pages

--- a/accounts/templates/accounts/login_social.html
+++ b/accounts/templates/accounts/login_social.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load bootstrap4 static %}
+{% load bootstrap4 static django_bootstrap_breadcrumbs %}
 
 {% block title %}Log in{% endblock %}
 
@@ -9,6 +9,12 @@
     {{ auth_data|json_script:"auth_data" }}
 
     <script src="{% static 'accounts/social_login.js' %}"></script
+{% endblock %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+
+    {% breadcrumb "Log in with Google" "accounts.login" %}
 {% endblock %}
 
 {% block content %}
