--- a/accounts/templates/accounts/login_native.html
+++ b/accounts/templates/accounts/login_native.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
-{% load bootstrap4 %}
+{% load bootstrap4 django_bootstrap_breadcrumbs %}
 
 {% block title %}Log in{% endblock %}
+
+{% block breadcrumbs %}
+    {{ block.super }}
+
+    {% breadcrumb "Log in" "accounts.login" %}
+{% endblock %}
 
 {% block content %}
 
