--- a/icons/templates/icons/partial/icons.html
+++ b/icons/templates/icons/partial/icons.html
@@ -1,11 +1,12 @@
 {% load thumbnail %}
 
-{% for icon in icons %}
-{% thumbnail icon.icon "90x90" as im %}
-<div class="icon-block">
-    <a href="{{ icon.href }}">
-        <img class="icon" src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-        <p class="icon-title">{{ icon.title }}</p>
-    </a>
-{% endthumbnail %}
-{% endfor %}
+<div class="icons">
+    {% for icon in icons %}
+    {% thumbnail icon.icon "90x90" as im %}
+        <a href="{{ icon.href }}" target="_blank">
+            <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+            <p class="icon-title">{{ icon.title }}</p>
+        </a>
+    {% endthumbnail %}
+    {% endfor %}
+</div>
