Add icons into the nav bar

--- a/nav/templates/nav/nav.html
+++ b/nav/templates/nav/nav.html
@@ -9,6 +9,7 @@
         <ul class="navbar-nav mr-auto">
             {% nav_item "Admin" "admin:index" "special:staff" %}
             {% nav_item "Calendar Generator" "calendar_generator:calendar-list" "calendar_generator.view_calendar" %}
+            {% nav_item "Icons" "icons:page-list" %}
         </ul>
 
         <ul class="navbar-nav mr-right">
