--- a/icons/templates/icons/page_detail.html
+++ b/icons/templates/icons/page_detail.html
@@ -15,4 +15,8 @@
 
 {% block content %}
     {% include "icons/partial/icons.html" with icons=icons %}
+
+    {% if has_admin_access and perms.calendar_generator.add_calendar %}
+        <p><a href="{% url 'admin:icons_page_change' object_id=object.id %}">Edit this page</a></p>
+    {% endif %}
 {% endblock %}
