Musings on folders

--- a/icons/templates/icons/page_detail.html
+++ b/icons/templates/icons/page_detail.html
@@ -15,7 +15,8 @@
 
 {% block content %}
     {% include "icons/partial/icons.html" with icons=icons %}
-
+    {% include "icons/partial/folders.html" with folders=folders %}
+    
     {% if has_admin_access and perms.calendar_generator.add_calendar %}
         <p><a href="{% url 'admin:icons_page_change' object_id=object.id %}">Edit this page</a></p>
     {% endif %}
