--- a/icons/templates/icons/page_list.html
+++ b/icons/templates/icons/page_list.html
@@ -18,7 +18,7 @@
 </ul>
 
 {% if has_admin_access and perms.icons.add_page %}
-    <p><a href="{% url 'admin:icons_icon_changelist' %}">Modify Icon Configurations</a></p>
+    <p><a href="{% url 'admin:icons_page_changelist' %}">Modify Icon Configurations</a></p>
 {% endif %}
 
 {% endblock %}
