--- a/icons/templates/icons/partial/folders.html
+++ b/icons/templates/icons/partial/folders.html
@@ -1,16 +1,16 @@
-{% for folder_id, folder_title, icons in folders %}
+{% for folder in folders %}
 
-<div class="modal fade" id="{{ folder_id }}" tabindex="-1" role="dialog" aria-labelledby="{{ folder_id }}-label" aria-hidden="true">
+<div class="modal fade" id="{{ folder.id }}" tabindex="-1" role="dialog" aria-labelledby="{{ folder.id }}-label" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="{{ folder_id }}-label">{{ folder_title }}</h5>
+        <h5 class="modal-title" id="{{ folder_id }}-label">{{ folder.title }}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        {% include "icons/partial/icons.html" with icons=icons %}
+        {% include "icons/partial/icons.html" with icons=folder.icons %}
       </div>
     </div>
   </div>
