--- a/icons/templates/icons/page_detail.html
+++ b/icons/templates/icons/page_detail.html
@@ -5,16 +5,12 @@
 {% block breadcrumbs %}
     {{ block.super }}
 
-    {% breadcrumb object.title "icons:static-page" slug=page.slug %}
+    {% breadcrumb page.title "icons:static-page" slug=page.slug %}
 {% endblock %}
 {% block title %}{{ page.title }}{% endblock %}
 
 {% block headextra %}
     <link rel="stylesheet" href="{% static 'icons/icons.css' %}">
-    <script src="{% static 'icons/icons.js' %}"></script>
-
-    {{ folder_id_prefix|json_script:"folder_id_prefix" }}
-
 {% endblock %}
 
 {% block content %}
@@ -22,6 +18,6 @@
     {% include "icons/partial/folders.html" with folders=folders %}
 
     {% if has_admin_access and perms.calendar_generator.add_calendar %}
-        <p><a href="{% url 'admin:icons_page_change' object_id=object.id %}">Edit this page</a></p>
+        <p><a href="{% url 'admin:icons_page_change' object_id=page.id %}">Edit this page</a></p>
     {% endif %}
 {% endblock %}
