--- a/icons/templates/icons/partial/icons.html
+++ b/icons/templates/icons/partial/icons.html
@@ -1,12 +1,23 @@
 {% load thumbnail %}
 
 <div class="icons">
-    {% for icon in icons %}
-    {% thumbnail icon.icon "90x90" as im %}
-        <a href="{{ icon.href }}" target="_blank">
-            <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-            <p class="icon-title">{{ icon.title }}</p>
-        </a>
-    {% endthumbnail %}
+    {% for compound_icon in icons %}
+        {% if compound_icon.icon %}
+            {% thumbnail compound_icon.icon.icon "90x90" as im %}
+                <a href="{{ compound_icon.icon.url }}" target="_blank">
+                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+                    <p class="icon-title">{{ compound_icon.icon.title }}</p>
+                </a>
+            {% endthumbnail %}
+        {% endif %}
+
+        {% if compound_icon.folder %}
+            {% thumbnail compound_icon.folder.icon "90x90" as im %}
+                <a href="#folder-{{ compound_icon.folder.folder_id }}" data-toggle="modal">
+                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
+                    <p class="icon-title">{{ compound_icon.folder.title }}</p>
+                </a>
+            {% endthumbnail %}
+        {% endif %}
     {% endfor %}
 </div>
