--- a/icons/templates/icons/partial/folder_modal.html
+++ b/icons/templates/icons/partial/folder_modal.html
@@ -1,15 +1,15 @@
-<div class="modal fade" id="folder-{{ folder.pk }}" tabindex="-1" role="dialog" aria-labelledby="folder-{{ folder.pk }}-label" aria-hidden="true">
+<div class="modal fade" id="folder-{{ folder.id }}" tabindex="-1" role="dialog" aria-labelledby="folder-{{ folder.id }}-label" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="folder-{{ folder.pk }}-label">{{ folder.title }}</h5>
+            <h5 class="modal-title" id="folder-{{ folder.id }}-label">{{ folder.title }}</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             </div>
             <div class="modal-body">
                 <div class="icons">
-                    {% for icon in icons %}
+                    {% for icon in folder.icons %}
                         {% include "icons/partial/icon.html" with icon=icon %}
                     {% endfor %}
                 </div>
