--- a/icons/templates/icons/partial/folder_modal.html
+++ b/icons/templates/icons/partial/folder_modal.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id="folder-{{ folder.id }}" tabindex="-1" role="dialog" aria-labelledby="folder-{{ folder.id }}-label" aria-hidden="true">
+<div class="modal fade" id="folder-{{ folder.folder_id }}" tabindex="-1" role="dialog" aria-labelledby="folder-{{ folder.folder_id }}-label" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="folder-{{ folder.id }}-label">{{ folder.title }}</h5>
+            <h5 class="modal-title" id="folder-{{ folder.folder_id }}-label">{{ folder.title }}</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
