--- a/icons/templates/icons/partial/folder_icon.html
+++ b/icons/templates/icons/partial/folder_icon.html
@@ -2,7 +2,9 @@
 
 {% thumbnail folder.icon "90x90" as im %}
     <a href="#folder-{{ folder.folder_id }}" data-toggle="modal">
-        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-        <p class="icon-title">{{ folder.title }}</p>
+        <div class="img-container">
+            <img src="{{ im.url }}">
+        </div>
+        <p>{{ folder.title }}</p>
     </a>
 {% endthumbnail %}
