--- a/icons/templates/icons/partial/icon.html
+++ b/icons/templates/icons/partial/icon.html
@@ -3,7 +3,9 @@
 {% thumbnail icon.icon "90x90" as im %}
  
     <a href="{{ icon.url }}" target="_blank">
-        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}">
-        <p class="icon-title">{{ icon.title }}</p>
+        <div class="img-container">
+            <img src="{{ im.url }}">
+        </div>
+        <p>{{ icon.title }}</p>
     </a>
 {% endthumbnail %}
