--- a/icons/templates/icons/partial/folder_icon.html
+++ b/icons/templates/icons/partial/folder_icon.html
@@ -1,10 +1,6 @@
-{% load thumbnail %}
-
-{% thumbnail folder.icon "90x90" as im %}
-    <a href="#folder-{{ folder.folder_id }}" data-toggle="modal">
-        <div class="img-container">
-            <img src="{{ im.url }}">
-        </div>
-        <p>{{ folder.title }}</p>
-    </a>
-{% endthumbnail %}
+<a href="#folder-{{ folder.folder_id }}" data-toggle="modal">
+    <div class="img-container">
+        <img src="{{ folder.icon.thumbnail.180x180 }}">
+    </div>
+    <p>{{ folder.title }}</p>
+</a>
