--- a/icons/templates/icons/partial/icon.html
+++ b/icons/templates/icons/partial/icon.html
@@ -1,4 +1,4 @@
-<a href="{{ icon.url }}" target="_blank">
+<a href="{{ icon.url }}" target="_blank" data-sortid="icon-{{ icon.page_icon_id }}"">
     <div class="img-container">
         <img src="{{ icon.icon.thumbnail.180x180 }}">
     </div>
