--- a/icons/templates/icons/partial/folder_icon.html
+++ b/icons/templates/icons/partial/folder_icon.html
@@ -1,4 +1,4 @@
-<a href="#folder-{{ folder.folder_id }}" data-toggle="modal">
+<a href="#folder-{{ folder.folder_id }}" data-toggle="modal" data-sortid="folder-{{ folder.page_folder_id }}">
     <div class="img-container">
         <img src="{{ folder.icon.thumbnail.180x180 }}">
     </div>
