Make icons sortable in the icon system (#32)
* Bring in jQuery UI

* Enable and disable UI elements

* Move admin buttons to the middle

* Spellcheck

* Page icon sorting

It's a ton of jank, and should have been done in React,
but it makes my data models WAY simpler to not use admin sort

* Select related items as required for __str__

Co-authored-by: Anonymous <anonymous@example.com>

--- a/icons/static/icons/icons.css
+++ b/icons/static/icons/icons.css
@@ -30,3 +30,11 @@ div.icons {
 div.icons div.img-container {
     height: 120px;
 }
+
+.show-during-sort {
+    display: none;
+}
+
+.show-during-sort-saving {
+    display: none;
+}
