--- a/icons/templates/icons/page_detail.html
+++ b/icons/templates/icons/page_detail.html
@@ -10,11 +10,18 @@
 {% block title %}{{ page.title }}{% endblock %}
 
 {% block headextra %}
+    <link rel="stylesheet" href="{% static 'pkg/jquery-ui-1.12.1/jquery-ui.theme.min.css' %}">
     <link rel="stylesheet" href="{% static 'icons/icons.css' %}">
+
+    <script src="{% static 'pkg/jquery-ui-1.12.1/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'icons/icons.js' %}"></script>
+
+    {{ csrf_token|escapejs|json_script:"csrf_token" }}
+    {{ sort_url|json_script:"sort_url" }}
 {% endblock %}
 
 {% block content %}
-    <div class="icons">
+    <div class="icons sortable hide-during-sort-saving">
         {% for item in icons %}
             {% if item.icon_type == "link" %}
                 {% include "icons/partial/icon.html" with icon=item %}
@@ -26,25 +33,50 @@
         {% endfor %}
     </div>
 
-    <div class="crosslinks">
+    <div class="crosslinks hide-during-sort-saving">
         <div class="row">
-            <div class="col-6">
+            <div class="col-4">
                 {% for page in crosslinks_left %}
                     <a href="{% url 'icons:page' slug=page.slug %}">{{ page.title }}</a>
+
+                    {% if not forloop.last %} &bullet; {% endif %}
                 {% endfor %}
             </div>
 
-            <div class="col-6" style="text-align: right;">
+            <div class="col-4" style="text-align: center;">
+                {% if has_admin_access and perms.icons.change_page %}
+                    <p>
+                        <a href="{% url 'admin:icons_page_change' object_id=page.id %}">Edit this page</a>
+                        <span class="hide-during-sort-saving">&bullet;</span>
+                        <span class="hide-during-sort">
+                            <a href="#" class="enable-icon-sort">Modify icon order</a>
+                        </span>
+                        <span class="show-during-sort">
+                            <a href="#" class="save-icon-order">Save icon order</a>
+                        </span>
+                    </p>
+                {% endif %}
+            </div>
+
+            <div class="col-4" style="text-align: right;">
                 {% for page in crosslinks_right %}
                     <a href="{% url 'icons:page' slug=page.slug %}">{{ page.title }}</a>
+
+                    {% if not forloop.last %} &bullet; {% endif %}
                 {% endfor %}
             </div>
         </div>
     </div>
 
-    {% if has_admin_access and perms.calendar_generator.add_calendar %}
-        <p><a href="{% url 'admin:icons_page_change' object_id=page.id %}">Edit this page</a></p>
-    {% endif %}
+    <div class="show-during-sort-saving">
+        <div class="row">
+            <div class="col-12">
+                <p id="data-save-progerss">Data save in progress</div>
+            </div>
+        </div>
+    </div>
+
+
 
     <!-- folder modals-->
     {% for folder in folders %}
