--- a/icons/templates/icons/page_detail.html
+++ b/icons/templates/icons/page_detail.html
@@ -44,17 +44,18 @@
             </div>
 
             <div class="col-4" style="text-align: center;">
+            
+                <a href="{% url 'icons:page-sparse' slug=page.slug %}">Sparse</a>
                 {% if has_admin_access and perms.icons.change_page %}
-                    <p>
-                        <a href="{% url 'admin:icons_page_change' object_id=page.id %}">Edit this page</a>
-                        <span class="hide-during-sort-saving">&bullet;</span>
-                        <span class="hide-during-sort">
-                            <a href="#" class="enable-icon-sort">Modify icon order</a>
-                        </span>
-                        <span class="show-during-sort">
-                            <a href="#" class="save-icon-order">Save icon order</a>
-                        </span>
-                    </p>
+                    &bullet;
+                    <a href="{% url 'admin:icons_page_change' object_id=page.id %}">Edit</a>
+                    <span class="hide-during-sort-saving">&bullet;</span>
+                    <span class="hide-during-sort">
+                        <a href="#" class="enable-icon-sort">Reorder</a>
+                    </span>
+                    <span class="show-during-sort">
+                        <a href="#" class="save-icon-order">Save order</a>
+                    </span>
                 {% endif %}
             </div>
 
