Make the sparse view full width

--- a/templates/base_sparse.html
+++ b/templates/base_sparse.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-    <div class="container main">
+    <div class="container-fluid main">
         {% bootstrap_messages %}
 
         {% block content %}
